# ir2mqtt

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Dockerfile.addon  Dockerfile.dev  Dockerfile.dev.dockerignore  Dockerfile.ha-app  LICENSE.md  Makefile  README.md  THIRD_PARTY_LICENSES.md  alembic.ini  build.yaml  config.json  docker-compose.yml  pyproject.toml  pytest.ini  requirements.dev.txt  requirements.txt  run.sh
.github/: PULL_REQUEST_TEMPLATE.md
.husky/: pre-commit  pre-push
backend/: automations.py  bridge_manager.py  config.py  database.py  dependencies.py  ha_automation_discovery.py  ha_discovery.py  integrations.py  ir_base.py  ir_db.py  loopback.py  main.py  models.py  mqtt.py  serial_manager.py  state.py  utils.py  websockets.py
docs/: automations.md  bridge-component.md  bridges.md  buttons-codes.md  dev-api.md  dev-migrations.md  dev-setup.md  dev-testing.md  devices.md  hardware-setup.md  index.md  ir-database.md  mqtt.md  package-lock.json  package.json  settings.md  troubleshooting.md  vitepress-pdf.config.ts  websocket.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  playwright.doc-gifs.config.ts  playwright.integration.config.ts  playwright.showcase.config.ts  tailwind.config.js  tsconfig.eslint.json  vite.config.ts  vitest.config.ts
migrations/: env.py
scripts/: dev-local.sh  generate-doc-gifs.sh  generate-docs-pdf.sh  generate-gif.sh  generate_licenses.py  run-e2e.sh  start-test-backend.sh  stop-test-backend.sh
tools/: find_untranslated_strings.py  (+1 more)
(+164 files in other folders)
